# syncIALO

./: .gitignore  CITATION.cff  README.md  pyproject.toml  serve_solar.sh
assets/: intro_post-20250202.md  learning_over_leasure_example.argdown
data/: eval_tags.txt  tags.txt  test_tags.txt  universal_tags.txt
notebooks/: chain_tests.ipynb  langchain_tests.ipynb  solar_deprecated.ipynb
scripts/: prepare_tags.py
src/syncialo/: __about__.py  builder.py  debate_builder.py  debate_builder_deprecated.py  queries.py
src/syncialo/chains/: __init__.py  argumentation.py  base_chain.py  base_chain_builder.py  classifier.py  debate_design.py  equivalence.py  utils.py
src/syncialo/translation/: __init__.py  translation.py
workflows/: prepare_tags.py  synthetic_corpus_genartion.py  synthetic_corpus_generation.py  synthetic_corpus_translation.py
