[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncialo"
dynamic = ["version"]
description = 'Synthetic drop-in replacements for _Kialo_ debate datasets '
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Gregor Betz", email = "3662782+ggbetz@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "datasets",
  "langchain>=0.3,<0.4",
  "langchain-huggingface>=0.1,<0.2",
  "loguru",
  "python-dotenv",
  "ujson",
]

[project.urls]
Documentation = "https://github.com/unknown/syncialo#readme"
Issues = "https://github.com/unknown/syncialo/issues"
Source = "https://github.com/unknown/syncialo"

[tool.hatch.version]
path = "src/syncialo/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "Flake8-pyproject",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.flake8]
max-line-length = 120

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/syncialo tests}"

[tool.coverage.run]
source_pkgs = ["syncialo", "tests"]
branch = true
parallel = true
omit = [
  "src/syncialo/__about__.py",
]

[tool.coverage.paths]
syncialo = ["src/syncialo", "*/syncialo/src/syncialo"]
tests = ["tests", "*/syncialo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
